src/index.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Tilt+Warp&display=swap');

h1,
h2 {
    font-family: 'Tilt Warp', cursive;

    margin: 0;
}

h3 {
    margin: 0;
}

h1 {
    text-transform: uppercase;
    font-size: 3em;
}

h2 {
    margin-top: -7px;
    margin-bottom: 0px;

    font-family: 'Roboto';
    font-size: 1em;
}

.button {
    width: 100px;
    height: 100px;

    display: flex;
    justify-content: center;
    align-items: center;

    background-color: lightgray;
    color: black;

    border-radius: 10%;

    font-size: 2em;

    cursor: pointer;

    &:hover {
        background-color: rgb(178, 175, 175);
        transition: background-color 0.3s;
    }
}

.button-wrapper {
    display: flex;
}

.main-app {
    font-family: 'Roboto';
}

.window-button-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.main-calculator {
    display: flex;
    justify-content: center;
    align-items: flex-start;

    height: calc(100vh - 150px);
}

.window-printout {
    width: 83%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    margin-bottom: 10px;

    .printout {
        width: 100%;
        height: 10px;

        text-align: right;
    }

    .main-window {
        input {
            text-align: right;

            font-size: 3em;

            width: 100%;

            margin: 10px 0px;

            border: 0px;

            &:focus,
            &:focus-visible {
                outline: 0px;
            }
        }
    }
}

.primary {
    margin-left: 10px;
    .button {
        background-color: lightcoral;

        &:hover {
            background-color: rgb(205, 110, 110);
            transition: background-color 0.3s;
        }
    }
}

.secondary {
    margin-bottom: 10px;
    .button {
        background-color: lightseagreen;

        &:hover {
            background-color: rgb(25, 145, 139);
            transition: background-color 0.3s;
        }
    }
}

.numbers,
.secondary,
.primary {
    display: flex;
    flex-direction: column;
    gap: 10px;
    .singleRow {
        display: flex;
        gap: 10px;
    }
}

// HISTORY WINDOW

.history-window {
    width: 300px;
    height: 100%;
}

.history-log-single {
    text-align: right;

    padding: 10px;
    margin-top: 10px;
    margin-bottom: 10px;

    background-color: rgb(238, 238, 238);

    border-radius: 10px;

    .result {
        font-weight: bold;
        font-size: 1.5em;
    }
}

// TRANSITION GROUP

@keyframes slide-in-top {
    0% {
        transform: translateY(-10px);
        opacity: 0;
    }
    100% {
        transform: translateY(0);
        opacity: 1;
    }
}

.item-enter {
    opacity: 0;
}
.item-enter-active {
    -webkit-animation: slide-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
        both;
    animation: slide-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
}

